--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   shared_preferences: ^0.5.8
   flustars: ^0.3.3
   flutter_svg: ^0.17.4
+  flutter_svg_provider: ^0.1.3
   tuple: ^1.0.3
   intl: ^0.16.1
   easy_localization: ^2.3.3
@@ -63,6 +64,7 @@ dependencies:
   event_bus: ^1.1.1
   flutter_slidable: ^0.5.5
   webview_flutter: ^0.3.22+1
+  extended_image: ^1.1.0
 
 dev_dependencies:
   flutter_test:
